<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".View.Ui.activity.ShopDetailsActivity">
    <item
        android:id="@+id/menu_near_by"
        android:orderInCategory="1"
        android:title="@string/menu_near_by"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_update_task"
        android:orderInCategory="2"
        android:title="@string/menu_update_task"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_feedback"
        android:orderInCategory="3"
        android:visible="false"
        android:title="@string/menu_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_update"
        android:orderInCategory="3"
        android:title="@string/menu_update"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_share"
        android:orderInCategory="4"
        android:title="@string/menu_share"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="5"
        android:title="@string/menu_about"
        app:showAsAction="never" />


</menu>
