<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".View.Ui.activity.ShopDetailsActivity">
    <item
        android:id="@+id/menu_shop_update"
        android:orderInCategory="1"
        android:title="@string/menu_shop_update"
        app:showAsAction="ifRoom" />
   <item
        android:id="@+id/menu_self_location"
        android:orderInCategory="2"
        android:icon="@drawable/ic_map_self_location"
        android:title="@string/menu_my_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_target_location"
        android:orderInCategory="2"
        android:title="@string/menu_target_location"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_navigation"
        android:orderInCategory="3"
        android:title="@string/menu_navigation"
        android:visible="false"
        app:showAsAction="never" />

</menu>
