<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".View.Ui.activity.ShopDetailsActivity">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_scan"
        android:orderInCategory="2"
        android:title="@string/menu_scan"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="2"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />


</menu>
